--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -258,6 +258,7 @@ ul#header_btm_content_dropdown > li a,
 	}
 
 	.header-dropdown-menu > a {
+		color: #1B6B93;
 		height: 50px;
 		background: #eee;
 	}
